# rag-eval-bootcamp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/rag_system/: __init__.py  core.py
tests/: test_core.py
